--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: kerry.kreiger@hotmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-14 09:38:31'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,5 +92,13 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Erick_CarterPolly_EsterImogene_Littel:
+    name: Erick_CarterPolly_EsterImogene_Littel
+    description: Really solid info
+    scheduler:
+      Nil: {}
+    schedulerJobUID: null
+    createdAt: '2022-04-14 09:38:32'
+    author: kerry.kreiger@hotmail.com
 libraries: []
